--- a/_posts/2019-09-04-week01.md
+++ b/_posts/2019-09-04-week01.md
@@ -3,7 +3,7 @@ layout: post
 title: Week 1 - Hello world!
 ---
 
-Welcome one and welcome all to my first internet blog post! In today's post I'll be entailing why I am taking open software development and... that's about it.
+Welcome one and all to my first internet blog post! In today's post I'll be entailing why I am taking open software development and... that's about it.
 
 I am currently taking open software development for a couple of reasons:
 1. The credits from the class work towards my computer science degree
