--- a/_posts/_2019-12-04-week13.md
+++ b/_posts/_2019-12-04-week13.md
@@ -1,10 +1,30 @@
 ---
 layout: post
-title: Week 13
+title: The end…?
 ---
+Welcome back wonderful human to my weekly blog! Can you believe that it’s already been 14 weeks since I wrote my first post? I can’t even tell you how timid I starting this class learning that I had to manage a blog that showed my writing to the world, even if it’s only a teensy percent of it. With how I managed to pump out 14 posts, I’ll call this great achievement progress! 
 
+Now onto the academic bits! For the last week of the semester, professor Weiss assigned us two readings, Tom Callaway’s blog post on the [musings on open source software business model]( https://spot.livejournal.com/327801.html) and Lee Congdon’s [eight advantages of using open source software in enterprise]( https://spot.livejournal.com/327801.html).
 
-This text should be replaced by your third post.
+### Musings on open source software business model
+Reading through Tom Callaway’s blog, I found that I was a little lost on the definitions of each category of business model, from subscription based all the way to peace of mind, and I think this takes a lot away from the post. I see that the purpose of the post is suppose to highlight certain business models over others, but the descriptions are simply not fleshed out enough. Callaway lists example companies, but he doesn’t list how exactly they’re set up, he only leaves an extremely vague “yeah these people use this model” instead of a step-by-step, this is how a new user is exposed to the service to how they generate revenue. I wish I could say that I took away something, but the business models the way they are currently defined make it too difficult for me to understand the value of a one model over the others.
 
-The easiest way to make your third post is to edit this one.
-Go into /_posts/ and update the 2019-12-04-week13.md file.
+### Eight Advantages of using open source software in enterprise
+Lee Congdon’s article about the advantages of using open source software in businesses is quite the opposite of Callaway’s. The article was easy to read and the points he separates the article into meaningfully break down benefits of open source. Going through all eight benefits listed they were all indeed points that the various guest speakers we had come in spoke about. Only one point was mentioned that the guest speakers never really touched on, which was the ease of getting started developing in an open source piece of software compared to proprietary software. The ability to install an environment right away and not have to wait for the approval of a company or department seems leagues compared to the alternative, other than that, the article reinforces what we’ve learned in class.
+
+### Would I work for a company that produces open source software?
+
+The end result is that open software or not, today’s economy is forcing everyone and their children to get a job to simply survive. I remember reading an article that two income family’s becoming more frequent will mean that it will eventually be the norm, and impossible to live [without duo income]( https://www.washingtonpost.com/opinions/two-paycheck-couples-are-quickly-becoming-the-norm/2012/04/18/gIQALSzlRT_story.html). This means I’ll take any computer science job I can get my hands on really. It’s not likely that I will be the CEO or head developer that’ll demand I make decisions on being proprietary or open source, it’ll come down to an hourly wage and being directed by a manager to get my project done. 
+
+Job aside, if I were working on a project alone in my free time, I would definitely use open source software due to the flexibility to add/suggest features I need on any given framework. That and maybe the low cost might be playing in as a factor… 
+### The last mention of git… not
+The goal of the class has been met! My [pull request]( https://github.com/microsoft/vscode/pull/85263) for the suggestion got merged and it is a glorious day! The pull request was not accepted immediately after I made it last week, rather there was a slight problem in the fact that I was changing a bit of preferred markdown formatting to something un-preferred. After receiving the feedback though, I made the revert to the bullet point format and the pull request was accepted! All my nerves standing on end and the courage to push through bore fruit!
+
+One problem I had doing this entire ordeal is that my contribution feels insignificant compared to the other students in my class. It definitely is a significant success for me, but it pails in comparison to adding a snippet of code or writing a page for a blog. I suppose the next step for me is editing a whole page as I have already written a new issue to VS code docs and am planning on making a pull request soon… baby steps! 
+
+Thank you, you beautiful person, for reading anything on this blog. It was a great experience improving my writing skills and it was extremely enjoyable. 10/10 would do again. In my free time… I’d give it a 5/10, since nothing can really beat staying in bed during the winter! if you have a job offer related to computer science, shoot me an email I’ll be more than happy to learn about it! If it’s for blog writing, I’ll take it too!
+
+Jokes aside, it’s been a real pleasure writing for you and for this open software class. I hope you’ll fair well in what life holds in store for you, and if you happen across any of my new writings in the future…
+
+See ya then!
+
